Add search, filters, tag/expansion icons, card images in modal
- Search bar on every tier list page (by card name)
- Filter chips: by tag, expansion, tier (with toggle)
- Tag icons (Animal, Building, Space...) from TM repo
- Expansion icons (Colonies, Venus Next...) from TM repo
- Card image shown in modal popup alongside card info
- Fix 2 card name mismatches (Envoys From Venus, Spin-Inducing Asteroid)
- Add Open Graph meta tags for link previews

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Terraforming Mars — Tier List</title>
+<meta property="og:title" content="Terraforming Mars — Tier List">
+<meta property="og:description" content="541 карта оценена для формата 3P / WGT / Все дополнения. Корпорации, прелюдии, проектные карты.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rusliksu.github.io/tm-tierlist/">
+<meta name="description" content="Terraforming Mars card tier list — 541 cards rated for 3P / WGT / All Expansions">
 <style>
 * {
     margin: 0;
