Add click hint in header subtitle

--- a/output/tierlist_corporations.html
+++ b/output/tierlist_corporations.html
@@ -86,6 +86,11 @@ body {
     color: #888;
 }
 
+.header .hint {
+    color: #e94560;
+    opacity: 0.7;
+}
+
 /* Filters */
 .filters {
     background: #16213e;
@@ -520,7 +525,7 @@ body {
 
 <div class="header">
     <h1>Corporations Tier List</h1>
-    <div class="subtitle">Format: 3P / WGT / All Expansions — 48 cards</div>
+    <div class="subtitle">Format: 3P / WGT / All Expansions — 48 cards &nbsp;·&nbsp; <span class="hint">Click a card for details</span></div>
 </div>
 
 
