--- a/output/tierlist_preludes_ru.html
+++ b/output/tierlist_preludes_ru.html
@@ -86,6 +86,11 @@ body {
     color: #888;
 }
 
+.header .hint {
+    color: #e94560;
+    opacity: 0.7;
+}
+
 /* Filters */
 .filters {
     background: #16213e;
@@ -520,7 +525,7 @@ body {
 
 <div class="header">
     <h1>Тир-лист прелюдий</h1>
-    <div class="subtitle">Формат: 3 игрока / WGT / Все дополнения — 66 карт</div>
+    <div class="subtitle">Формат: 3 игрока / WGT / Все дополнения — 66 карт &nbsp;·&nbsp; <span class="hint">Нажмите на карту для подробностей</span></div>
 </div>
 
 
