--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Terraforming Mars — Tier List</title>
 <meta property="og:title" content="Terraforming Mars — Tier List">
-<meta property="og:description" content="684 карты оценены для формата 3P / WGT / Все дополнения. Корпорации, прелюдии, проектные карты, CEO, Pathfinder.">
+<meta property="og:description" content="687 карт оценены для формата 3P / WGT / Все дополнения. Корпорации, прелюдии, проектные карты, CEO, Pathfinder.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://rusliksu.github.io/tm-tierlist/">
-<meta name="description" content="Terraforming Mars card tier list — 684 cards rated for 3P / WGT / All Expansions">
+<meta name="description" content="Terraforming Mars card tier list — 687 cards rated for 3P / WGT / All Expansions">
 <style>
 * {
     margin: 0;
@@ -231,7 +231,7 @@ body {
 
 <div class="header">
     <h1>Terraforming Mars — Tier List</h1>
-    <div class="subtitle" data-ru="684 карты оценены для формата 3P / WGT / Все дополнения" data-en="684 cards rated for 3P / WGT / All Expansions">684 карты оценены для формата 3P / WGT / Все дополнения</div>
+    <div class="subtitle" data-ru="687 карт оценены для формата 3P / WGT / Все дополнения" data-en="687 cards rated for 3P / WGT / All Expansions">687 карт оценены для формата 3P / WGT / Все дополнения</div>
     <div class="lang-switch">
         <a class="active" data-lang="ru">RU</a>
         <a data-lang="en">EN</a>
@@ -242,7 +242,7 @@ body {
     <div class="cards-grid">
         <a class="nav-card" id="card-corps" href="output/tierlist_corporations_ru.html">
             <h2 data-ru="Корпорации" data-en="Corporations">Корпорации</h2>
-            <div class="count" data-ru="67 карт" data-en="67 cards">67 карт</div>
+            <div class="count" data-ru="68 карт" data-en="68 cards">68 карт</div>
             <div class="tier-bar" id="bar-corps"></div>
             <div class="tier-breakdown" id="tb-corps"></div>
         </a>
@@ -272,27 +272,27 @@ body {
             <div class="stat-item">
                 <div class="stat-color" style="background: #FF7F7F"></div>
                 <span class="stat-label">S</span>
-                <span class="stat-value">49</span>
+                <span class="stat-value">8</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #FFBF7F"></div>
                 <span class="stat-label">A</span>
-                <span class="stat-value">82</span>
+                <span class="stat-value">57</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #FFDF7F"></div>
                 <span class="stat-label">B</span>
-                <span class="stat-value">175</span>
+                <span class="stat-value">174</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #BFFF7F"></div>
                 <span class="stat-label">C</span>
-                <span class="stat-value">244</span>
+                <span class="stat-value">304</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #7FFF7F"></div>
                 <span class="stat-label">D</span>
-                <span class="stat-value">127</span>
+                <span class="stat-value">137</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #CCCCCC"></div>
@@ -313,9 +313,9 @@ const tierColors = {S:"#FF7F7F",A:"#FFBF7F",B:"#FFDF7F",C:"#BFFF7F",D:"#7FFF7F",
 
 // Tier distribution per category (from evaluations.json)
 const tierData = {
-    corps: {S:4, A:10, B:15, C:22, D:16, F:0},
-    preludes: {S:5, A:14, B:29, C:17, D:13, F:1},
-    projects: {S:39, A:55, B:122, C:191, D:89, F:4},
+    corps: {S:1, A:13, B:15, C:25, D:13, F:1},
+    preludes: {S:1, A:10, B:29, C:19, D:19, F:1},
+    projects: {S:5, A:31, B:121, C:244, D:96, F:3},
     ceos: {S:1, A:3, B:9, C:14, D:9, F:2}
 };
 
