--- a/output/tierlist_preludes_ru.html
+++ b/output/tierlist_preludes_ru.html
@@ -604,7 +604,7 @@ body {
 
 <nav class="top-nav">
     <a class="nav-link nav-back" href="../index.html">← Назад</a>
-    <div class="nav-links"><a class="nav-link" href="tierlist_corporations_ru.html">Корпорации</a><span class="nav-link active">Прелюдии</span><a class="nav-link" href="tierlist_projects_ru.html">Проекты</a><a class="nav-link" href="tierlist_ceos_ru.html">CEO</a><a class="nav-link" href="tierlist_pathfinder_ru.html">Pathfinder</a></div>
+    <div class="nav-links"><a class="nav-link" href="tierlist_corporations_ru.html">Корпорации</a><span class="nav-link active">Прелюдии</span><a class="nav-link" href="tierlist_projects_ru.html">Проекты</a><a class="nav-link" href="tierlist_ceos_ru.html">CEO</a></div>
     <a class="nav-link nav-lang" href="tierlist_preludes.html">EN</a>
 </nav>
 
