--- a/output/tierlist_projects.html
+++ b/output/tierlist_projects.html
@@ -604,7 +604,7 @@ body {
 
 <nav class="top-nav">
     <a class="nav-link nav-back" href="../index.html">← Back</a>
-    <div class="nav-links"><a class="nav-link" href="tierlist_corporations.html">Corporations</a><a class="nav-link" href="tierlist_preludes.html">Preludes</a><span class="nav-link active">Projects</span><a class="nav-link" href="tierlist_ceos.html">CEOs</a><a class="nav-link" href="tierlist_pathfinder.html">Pathfinder</a></div>
+    <div class="nav-links"><a class="nav-link" href="tierlist_corporations.html">Corporations</a><a class="nav-link" href="tierlist_preludes.html">Preludes</a><span class="nav-link active">Projects</span><a class="nav-link" href="tierlist_ceos.html">CEOs</a></div>
     <a class="nav-link nav-lang" href="tierlist_projects_ru.html">RU</a>
 </nav>
 
