--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Terraforming Mars — Tier List</title>
 <meta property="og:title" content="Terraforming Mars — Tier List">
-<meta property="og:description" content="684 карты оценены для формата 3P / WGT / Все дополнения. Корпорации, прелюдии, проектные карты, CEO.">
+<meta property="og:description" content="686 карт оценены для формата 3P / WGT / Все дополнения. Корпорации, прелюдии, проектные карты, CEO.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://rusliksu.github.io/tm-tierlist/">
-<meta name="description" content="Terraforming Mars card tier list — 684 cards rated for 3P / WGT / All Expansions">
+<meta name="description" content="Terraforming Mars card tier list — 686 cards rated for 3P / WGT / All Expansions">
 <style>
 * {
     margin: 0;
@@ -231,7 +231,7 @@ body {
 
 <div class="header">
     <h1>Terraforming Mars — Tier List</h1>
-    <div class="subtitle" data-ru="684 карты оценены для формата 3P / WGT / Все дополнения" data-en="684 cards rated for 3P / WGT / All Expansions">684 карты оценены для формата 3P / WGT / Все дополнения</div>
+    <div class="subtitle" data-ru="686 карт оценены для формата 3P / WGT / Все дополнения" data-en="686 cards rated for 3P / WGT / All Expansions">686 карт оценены для формата 3P / WGT / Все дополнения</div>
     <div class="lang-switch">
         <a class="active" data-lang="ru">RU</a>
         <a data-lang="en">EN</a>
@@ -277,22 +277,22 @@ body {
             <div class="stat-item">
                 <div class="stat-color" style="background: #FFBF7F"></div>
                 <span class="stat-label">A</span>
-                <span class="stat-value">53</span>
+                <span class="stat-value">56</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #FFDF7F"></div>
                 <span class="stat-label">B</span>
-                <span class="stat-value">171</span>
+                <span class="stat-value">177</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #BFFF7F"></div>
                 <span class="stat-label">C</span>
-                <span class="stat-value">306</span>
+                <span class="stat-value">304</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #7FFF7F"></div>
                 <span class="stat-label">D</span>
-                <span class="stat-value">140</span>
+                <span class="stat-value">135</span>
             </div>
             <div class="stat-item">
                 <div class="stat-color" style="background: #CCCCCC"></div>
@@ -306,6 +306,7 @@ body {
 
 <div class="footer">
     Terraforming Mars Tier List &mdash; <a href="https://github.com/rusliksu/tm-tierlist">github.com/rusliksu/tm-tierlist</a>
+    <br><span data-ru="Обновлено: Февраль 2026" data-en="Last updated: Feb 2026">Обновлено: Февраль 2026</span>
 </div>
 
 <script>
@@ -315,7 +316,7 @@ const tierColors = {S:"#FF7F7F",A:"#FFBF7F",B:"#FFDF7F",C:"#BFFF7F",D:"#7FFF7F",
 const tierData = {
     corps: {S:1, A:10, B:16, C:26, D:14, F:0},
     preludes: {S:1, A:10, B:28, C:20, D:19, F:1},
-    projects: {S:5, A:30, B:118, C:246, D:98, F:3},
+    projects: {S:5, A:33, B:124, C:242, D:93, F:3},
     ceos: {S:1, A:3, B:9, C:14, D:9, F:2}
 };
 
