--- a/extension/popup.html
+++ b/extension/popup.html
@@ -247,7 +247,8 @@
 
   <div class="info" id="info"></div>
   <div class="hotkey"><kbd>T</kbd> вкл/выкл | <kbd>F</kbd> поиск | <kbd>M</kbd> вехи | <kbd>O</kbd> оппоненты</div>
-  <div class="hotkey"><kbd>S</kbd> сорт | <kbd>G</kbd> доход | <kbd>P</kbd> пул | <kbd>Q</kbd> порядок | <kbd>D</kbd> теги | <kbd>V</kbd> VP</div>
+  <div class="hotkey"><kbd>S</kbd> сорт | <kbd>G</kbd> доход | <kbd>P</kbd> пул | <kbd>Q</kbd> порядок | <kbd>D</kbd> теги</div>
+  <div class="hotkey"><kbd>V</kbd> VP | <kbd>W</kbd> глобальные</div>
   <div class="hotkey"><kbd>1</kbd>-<kbd>6</kbd> фильтр тиров | <kbd>H</kbd> справка | <kbd>Esc</kbd> закрыть</div>
 
   <script src="data/ratings.json.js"></script>
