Debug-режим: логгер, UI-панель, performance profiling
- tmLog/tmWarn с категориями (score/perf/api/ctx/vp/storage/game)
- Ring buffer 200 записей + фиксированная debug-панель (Shift+D)
- Замеры processAll + breakdown (combos/draft/vp)
- Все catch() теперь с описанием ошибки вместо молчания
- Popup toggle + persistence через chrome.storage

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -207,6 +207,14 @@
       <button class="tier-btn" data-tier="F">F</button>
     </div>
 
+    <div class="row">
+      <span>Debug mode</span>
+      <label class="toggle">
+        <input type="checkbox" id="toggle-debug">
+        <span class="slider"></span>
+      </label>
+    </div>
+
     <div class="section-label">Настройки</div>
     <div class="settings-actions">
       <button id="btn-export-settings" class="settings-btn">Экспорт</button>
